styles.css
/* Course: SENG 513 */
/* Date: OCT 23, 2023 */
/* Assignment 2 */
/* Name: Jasraj Sandhu */
/* UCID: 30054475 */

* {
    cursor: crosshair;
    user-select: none;
}

/* Gradient style is based on: https://codepen.io/naprirfan/pen/xEvRae */
body {
    background-color: #183a70;
    margin: 0;
    /* overflow: hidden; */
    background-image:
        linear-gradient(rgba(255, 255, 255, 0.25) 0.05em, transparent 0.05em),
        linear-gradient(90deg, rgba(255, 255, 255, 0.25) 0.05em, transparent 0.05em);
    background-size: 3em 3em;
}

.main-menu {
    text-align: center;
}

#title {
    color: white;
    font-family: "Dela Gothic One", sans-serif;
    font-size: 4em;
    text-align: center;
}

#play-button {
    color: white;
    background-color: blue;
    border: none;
    border-radius: 25%;
    text-align: center;
    font-size: 2em;
    width: fit-content;
    height: fit-content;
    margin-top: 10%;
}

#game-area {
    border: 3px solid black;
    height: 100vh;
}

.player-hud {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    position: relative;
    z-index: 2;
}

.player-hud p, a {
    color: white;
    font-family: "Dela Gothic One", sans-serif;
}

.timer {
    display: flex;
    flex-direction: row;
    justify-content: right;
    color: white;
    font-family: "Dela Gothic One", sans-serif;
}

#player-health {
    display: flex;
    flex-direction: row-reverse;
    color: white;
    font-family: "Dela Gothic One", sans-serif;
    margin-bottom: 5px;
}

 .player-health-heart {
    width:  3em;
    height: 3em;
    pointer-events: none;
}

#score {
    display: flex;
    flex-direction: row;
    text-align: left;
    position: absolute;
    top: 5px;
    left: 10px;
}

/* All elements on right side of HUD are right-aligned */
#timer-health-question {
    text-align: right;
    position: absolute;
    top: 5px;
    right: 10px;
}

/* Displaying question (JS functionality later) */
#question {
    color: white;
    font-family: "Dela Gothic One", sans-serif;
    text-decoration: underline;
}

#word-display {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 20px;
    left: 50%;
    right: 50%;
}

/* These are the dynamically added spans that serve as letter placeholders */
.letter {
    color: white;
    margin-left: 1px;
    border: 3px solid black;
    font-size: 6em;
}

.floating-letter {
    color: white;
    background: red;
    position: absolute;
    font-size: 3em;
    width: 1.25em;
    height: 1.25em;
    text-align: center;

    /* THESE ARE TEMPORARY (DEBUGGING ONLY) */
    /* left: 50%;
    right: 50%;
    top: 50%;
    bottom: 50%; */
}

